<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartHome</string>
    
    <string name="main_title">Main</string>
    <string name="main_1_1">Device</string>
    <string name="main_1_2">Scene</string>
    <string name="main_1_3">Camera</string>
    <string name="main_2_1">Infrared</string>
    <string name="main_2_2">Smart Scene</string>
    <string name="main_2_3">Setting</string>
    
    <string name="device_title">Device</string>
    
    <string name="scene_title">Scene</string>
    <string name="scene_apply_button">Apply</string>
    <string name="scene_1">back home</string>
    <string name="scene_2">go out</string>
    <string name="scene_3">meal</string>
    <string name="scene_4">relax</string>
    <string name="scene_5">night</string>
    

</resources>
