<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/MainLayout"
    tools:context="smarthome.DeviceActivity" >
    
    <!-- FIRST ROW -->
        
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
	    android:layout_marginTop="30dp"
		android:orientation="horizontal" >
	            
	    <LinearLayout
			android:layout_width="50sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >
			        
			<ImageButton
		    	android:id="@+id/imageButton_main_1_1"
                style="@style/Main_listImageButton"
		        android:layout_gravity="center"
		        android:onClick="ButtonClick_main_1_1"
		        android:background="@drawable/device" />
	                
			<TextView
		    	android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/main_1_1"
		        android:textSize="20sp" />
			        
		</LinearLayout>
			    
	    <LinearLayout
			android:layout_width="50sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >
			        
			<ImageButton
		    	android:id="@+id/imageButton_main_1_2"
                style="@style/Main_listImageButton"
		        android:layout_gravity="center"
		        android:onClick="ButtonClick_main_1_2"
		        android:background="@drawable/scene" />
	                
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/main_1_2"
		        android:textSize="20sp" />
			        
		</LinearLayout>
			    
	    <LinearLayout
			android:layout_width="50sp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:orientation="vertical" >
			        
			<ImageButton
		    	android:id="@+id/imageButton_main_1_3"
                style="@style/Main_listImageButton"
		        android:layout_gravity="center"
		        android:onClick="ButtonClick_main_1_3"
		        android:background="@drawable/camera" />
	                
			<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:text="@string/main_1_3"
		        android:textSize="20sp" />
			        
		</LinearLayout>
		
	</LinearLayout>
	
	<!-- SECOND ROW -->
	        
	    <LinearLayout
	        android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_marginTop="30dp"
		    android:orientation="horizontal" >
	            
	        <LinearLayout
			    android:layout_width="50sp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical" >
			        
			    <ImageButton
		            android:id="@+id/imageButton_main_2_1"
                	style="@style/Main_listImageButton"
		            android:layout_gravity="center"
		            android:onClick="ButtonClick_main_2_1"
		            android:background="@drawable/infrared" />
	                
			    <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/main_2_1"
		            android:textSize="20sp" />
			        
			</LinearLayout>
			    
	        <LinearLayout
			    android:layout_width="50sp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical" >
			        
			    <ImageButton
		            android:id="@+id/imageButton_main_2_2"
                	style="@style/Main_listImageButton"
		            android:layout_gravity="center"
		            android:onClick="ButtonClick_main_2_2"
		            android:background="@drawable/smart_scene" />
	                
			    <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/main_2_2"
		            android:textSize="20sp" />
			        
			</LinearLayout>
			    
	        <LinearLayout
			    android:layout_width="50sp"
			    android:layout_height="wrap_content"
			    android:layout_weight="1"
			    android:orientation="vertical" >
			        
			    <ImageButton
		            android:id="@+id/imageButton_main_2_3"
                	style="@style/Main_listImageButton"
		            android:layout_gravity="center"
		            android:onClick="ButtonClick_main_2_3"
		            android:background="@drawable/setting" />
	                
			    <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_gravity="center"
		            android:text="@string/main_2_3"
		            android:textSize="20sp" />
			        
			</LinearLayout>
	            
		</LinearLayout>
	    
</LinearLayout>