<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    	<!-- GUIDE BAR -->
    
        <LinearLayout
        	android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginLeft="10dp"
    	    android:layout_marginRight="10dp"
	        android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/imageButtonLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ButtonClick_left"
                android:src="@drawable/ic_launcher" />

            <TextView
                android:id="@+id/textViewCenter"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/main_title"
                android:textSize="30sp" />

            <ImageButton
                android:id="@+id/imageButtonRight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="ButtonClick_right"
                android:src="@drawable/ic_launcher" />
            
	    </LinearLayout>
	    
        <!-- FIRST ROW -->
        
        <LinearLayout
        	android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="30dp"
	        android:orientation="horizontal" >
            
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_1_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_1_1"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_1_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_1_1"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
		    
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_1_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_1_2"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_1_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_1_2"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
		    
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_1_3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_1_3"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_1_3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_1_3"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
            
	    </LinearLayout>

        <!-- SECOND ROW -->
        
        <LinearLayout
        	android:layout_width="match_parent"
    	    android:layout_height="wrap_content"
    	    android:layout_marginTop="30dp"
	        android:orientation="horizontal" >
            
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_2_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_2_1"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_2_1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_2_1"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
		    
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_2_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_2_2"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_2_2"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_2_2"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
		    
            <LinearLayout
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:orientation="vertical" >
		        
		        <ImageButton
	                android:id="@+id/imageButton_2_3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:onClick="ButtonClick_2_3"
	                android:src="@drawable/ic_launcher" />
                
		        <TextView
	                android:id="@+id/textView_2_3"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center"
	                android:text="@string/main_2_3"
	                android:textSize="20sp" />
		        
		    </LinearLayout>
            
	    </LinearLayout>
        
        
</LinearLayout>
